2011-12-07 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-compose-git-import): Fix
	byte compile.
	(epackage-info-mode-font-lock-keywords): Allow dash
	in header names.
	(epackage--layout-mapping): Add *-epkg-* to all files.
	(epackage-devel-compose-main): Use `epackage-layout-mapping-file'.
	(epackage-loader-file-insert-header): Mention M-x command.

2011-11-19 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el: Adjust Tag descriptions of custom variables.
	Patch thanks to David Ross <H.David.Ross@gmail.com>.
	Add autoload stanzas to more variables.
	(epackage-assoc): Rename from `epackage-asscoc'.
	(epackage-narrow-to-field): implement function.
	(epackage-field-forward): New.
	(epackage-field-backward): New.
	(epackage-field-name): Add arg region.
	(epackage-autoload-create-on-file): Simplify function by
	removing parameters no-show, no-desc and no-path. Make
	buffer parameter required.
	(epackage--buffer-autoload): New.
	(epackage-autoload-create-on-file): Update changes
	according to `epackage-autoload-create-on-file'.
	(epackage--root-directory): signal error if no root found and
	suggest creating directory ~/.emacs.d
	(epackage-layout-file-name): Check type for error.
	(epackage--layout-mapping): Add synonym mapping: autoloads.
	(epackage-make-directory): New.
	(epackage-with-buffer-autoload): New.
	(epackage-devel-generate-autoloads): Implement.
	(epackage-directory-file-list): Exclude [#~] fles.
	(epackage-devel-generate-loaddefs): Implement.
	(epackage--layout-template-info): New.
	(epackage-devel-information-buffer): New.
	(epackage-devel-information-license): New.
	(epackage-devel-information-license-gpl-standard): New.
	(epackage-devel-information-version): New.
	(epackage-version-time): adjust docstring.
	(epackage-date-to-iso): New.
	(epackage-devel-information-maintainer): New.
	(epackage-devel-information-homepage): New.
	(epackage-devel-information-date): New.
	(epackage--date-month-list): New.